# Digital-Fingerprint-Analysis

./: README.md  main1_rest.cpp  main1_simu.cpp  main3_simu.cpp  starter3.cpp
digital-fingerprint-analysis-main/: CMakeLists.txt  README.md
digital-fingerprint-analysis-main/include/: main1_rest.hpp  part3.hpp  starter1.hpp
digital-fingerprint-analysis-main/picture/: Thumbs.db
digital-fingerprint-analysis-main/src/: main3_rest.cpp  starter1.cpp
digital-fingerprint-analysis-main/test/: Minutiae_extraction.m  main1_rest_test.cpp  main1_simu_test.cpp  main3_rest_test.cpp  main3_simu_test.cpp  starter1_test.cpp  starter2_test.py
